# play8-backend

./: .dockerignore  .gitignore  Dockerfile  POETRY_SETUP.md  SYSTEM_PROMPT.md  convert_bg_to_white.py  crop_logo.py  database.py  db_models.py  init_db.py  main.py  models.py  pyproject.toml  requirements.txt  ruff.toml
alembic/: README.md  env.py
alembic/versions/: 174eca58c367_add_hash_password_and_verified_to_users.py  29560a05b59e_create_waiting_list_table.py  3173ad542597_build_messages_table.py  4a8b2c3d4e5f_add_content_blocks_table.py  5b9c3d4e5f6a_add_card_progress_table.py  6a35ef73e03f_add_plan_items_table.py  a1b2c3d4e5f6_add_stripe_payment.py  b1a0c9d8e7f6_create_users_table.py  d2e3f4a5b6c7_create_machines_and_bookings.py  e42770cd29ee_replace_plan_items_with_saved_training_.py  eef47727a917_add_manual_knowledge_base_tables.py
scripts/: convert_bg_to_transparent.py  convert_bg_to_white.py  create_favicon.py  crop_logo.py
src/: __init__.py  main.py  routers.py
src/agent/: agent.py  ai_completion.py  db_model.py  models.py  repository.py  router.py  service.py  tools.py
src/booking/: __init__.py  db_model.py  models.py  repository.py  router.py  service.py
src/core/: __init__.py  config.py  database.py  email.py  models.py  security.py
src/machine/: __init__.py  db_model.py  models.py  repository.py  router.py  service.py
src/manual/: README.md  db_model.py  index_manual.py  repository.py  router.py  tool.py
src/payment/: db_model.py  models.py  repository.py  router.py  service.py
src/plan/: db_model.py  models.py  repository.py  router.py  (+1 more)
(+17 files in other folders)
